Extracted more calls to Globals.prefs and fixed some ide warnings